--- a/pages/icon.html
+++ b/pages/icon.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>首页-欢迎</title>
+    <link href="../css/ls.admin.css" rel="stylesheet" />
     <link href="../css/icon.css" rel="stylesheet" />
     <style type="text/css">
         body {
