--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -4,17 +4,67 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>首页-欢迎</title>
-    <link href="css/button.css" rel="stylesheet" />
+    <link href="../css/ls.admin.css" rel="stylesheet" />
+    <link href="../css/button.css" rel="stylesheet" />
     <style type="text/css">
         body {
             font-family: "微软雅黑";
+        }
+        
+        .block-panel {
+            width: 60%;
+            padding: 10px;
+            border: 1px solid #e6e6e6;
+            border-radius: 4px;
         }
     </style>
 </head>
 
 <body>
     <h1>按钮</h1>
+    <h2>Types</h2>
     <div>
+        <button type="button" class="btn">Default</button>
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-success">Success</button>
+        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-warning">Warning</button>
+        <button type="button" class="btn btn-link">Link</button>
+    </div>
+    <h2>Size</h2>
+    <h3>Large</h3>
+    <div>
+        <button type="button" class="btn btn-large">Large</button>
+        <button type="button" class="btn btn-primary btn-large">Primary</button>
+        <button type="button" class="btn btn-success btn-large">Success</button>
+        <button type="button" class="btn btn-danger btn-large">Danger</button>
+        <button type="button" class="btn btn-warning btn-large">Warning</button>
+        <button type="button" class="btn btn-link btn-large">Link</button>
+    </div>
+    <h3>Mini</h3>
+    <div>
+        <button type="button" class="btn btn-mini">Mini</button>
+        <button type="button" class="btn btn-primary btn-mini">Primary</button>
+        <button type="button" class="btn btn-success btn-mini">Success</button>
+        <button type="button" class="btn btn-danger btn-mini">Danger</button>
+        <button type="button" class="btn btn-warning btn-mini">Warning</button>
+        <button type="button" class="btn btn-link btn-mini">Link</button>
+    </div>
+    <h2>Block</h2>
+    <div class="block-panel">
+        <button type="button" class="btn btn-block">Block</button>
+        <button type="button" class="btn btn-primary btn-block">Primary</button>
+        <button type="button" class="btn btn-success btn-block">Success</button>
+        <button type="button" class="btn btn-danger btn-block">Danger</button>
+        <button type="button" class="btn btn-warning btn-block">Warning</button>
+    </div>
+    <h2>Button Group</h2>
+    <div>
+        <div class="btn-group">
+            <label class="btn">Left</label>
+            <label class="btn">Middle</label>
+            <label class="btn">Right</label>
+        </div>
     </div>
 </body>
 
