优化左侧菜单列表

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                         <span>二级菜单</span>
                                         <b class="expandable fa fa-angle-left" aria-hidden="true"></b>
                                     </a>
-                                    <ul class="node-container-son node-leaf">
+                                    <ul class="node-container">
                                         <li>
                                             <a pid="141" class="node  node-leaf" data-href="pages/icon.html">
                                                 <i class="fa fa-drupal fa-fw" aria-hidden="true"></i>
