--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a pid="17" class="node node-leaf" data-href="">
+                                    <a pid="15" class="node node-leaf" data-href="pages/form.html">
                                         <i class="fa fa-file-text-o fa-fw" aria-hidden="true"></i>
-                                        <span>操作管理</span>
+                                        <span>表单</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a pid="22" class="node node-leaf" data-href="">
+                                    <a pid="16" class="node node-leaf" data-href="">
                                         <i class="fa fa-trophy fa-fw" aria-hidden="true"></i>
                                         <span>角色管理</span>
                                     </a>
