--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
                                         <span>表单</span>
                                     </a>
                                 </li>
+
+                                <li>
+                                    <a pid="16" class="node node-leaf" data-href="pages/form-validate.html">
+                                        <i class="fa fa-file-text-o fa-fw" aria-hidden="true"></i>
+                                        <span>表单校验</span>
+                                    </a>
+                                </li>
                                 <li>
                                     <a pid="16" class="node node-leaf" data-href="">
                                         <i class="fa fa-trophy fa-fw" aria-hidden="true"></i>
