1.完善tab页操作

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="header flex">
                             <!--left-->
                             <div class="tab-operate tab-operate-left">
-                                <a class="fa fa-2x fa-angle-double-left"></a>
+                                <a class="fa fa-2x fa-angle-double-left opt-left"></a>
                             </div>
                             <!--titles-->
                             <div class="ls-tab-titles flex">
@@ -140,7 +140,7 @@
                             </div>
                             <!--right-->
                             <div class="tab-operate tab-operate-right">
-                                <a class="fa fa-2x fa-angle-double-right"></a>
+                                <a class="fa fa-2x fa-angle-double-right opt-right"></a>
                                 <a class="fa fa-2x fa-angle-double-down">
                                     <div class="dropdown-panel">
                                         <ul>
