--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
                         <a class="operate-item slider" href="javascript:page.slide()"><i class="ls-icon ls-icon-spread-left"></i></a>
                     </div>
                     <div class="nav-right">
+                        <a class="opt-user">
+                            <img class="avatar" src="./resources/images/avatar.png" />
+                            <span>管理员</span>
+                            <div class="dropdown-panel">
+                                <ul>
+                                    <li class="opt" data-opt="refresh">用户信息</li>
+                                    <li class="opt" data-opt="closeOthers">系统设置</li>
+                                    <li class="split"></li>
+                                    <li class="opt" data-opt="closeAll">注销登录</li>
+                                </ul>
+                            </div>
+                        </a>
                     </div>
                 </header>
                 <main>
