按钮增加disabled样式

--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -31,6 +31,18 @@
         <button type="button" class="btn btn-warning">Warning</button>
         <button type="button" class="btn btn-link">Link</button>
     </div>
+    
+    <h2>Disabled</h2>
+    
+    <div>
+        <button type="button" class="btn" disabled>Default</button>
+        <button type="button" class="btn btn-primary" disabled>Primary</button>
+        <button type="button" class="btn btn-success" disabled>Success</button>
+        <button type="button" class="btn btn-danger" disabled>Danger</button>
+        <button type="button" class="btn btn-warning" disabled>Warning</button>
+        <button type="button" class="btn btn-link" disabled>Link</button>
+    </div>
+
     <h2>Size</h2>
     <h3>Large</h3>
     <div>
@@ -58,14 +70,14 @@
         <button type="button" class="btn btn-danger btn-block">Danger</button>
         <button type="button" class="btn btn-warning btn-block">Warning</button>
     </div>
-    <h2>Button Group</h2>
+    <!-- <h2>Button Group</h2>
     <div>
         <div class="btn-group">
             <label class="btn">Left</label>
             <label class="btn">Middle</label>
             <label class="btn">Right</label>
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
