--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
                                 </li>
 
                                 <li>
-                                    <a pid="16" class="node node-leaf" data-href="pages/form-validate.html">
+                                    <a pid="16" class="node node-leaf" data-href="pages/select2.html">
                                         <i class="fa fa-file-text-o fa-fw" aria-hidden="true"></i>
-                                        <span>表单校验</span>
+                                        <span>Select2</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a pid="16" class="node node-leaf" data-href="">
-                                        <i class="fa fa-trophy fa-fw" aria-hidden="true"></i>
-                                        <span>角色管理</span>
+                                    <a pid="17" class="node node-leaf" data-href="pages/form.html">
+                                        <i class="fa fa-file-text-o fa-fw" aria-hidden="true"></i>
+                                        <span>表单</span>
                                     </a>
                                 </li>
 
