--- a/pages/form-validate.html
+++ b/pages/form-validate.html
@@ -28,10 +28,10 @@
     <h3>基于 <strong>jquery.validate.js</strong></h3>
     <form class="ls-form form-login">
         <div class="ls-form-item">
-            <input type="text" required="true" name="username" placeholder="请输入用户名" />
+            <input type="text" required="true" name="username" placeholder="请输入用户名" error-message="请输入用户名" />
         </div>
         <div class="ls-form-item">
-            <input type="password" required="true" name="password" placeholder="请输入密码" />
+            <input type="password" required="true" name="password" placeholder="请输入密码" error-message="请输入密码" />
         </div>
         <div class="ls-form-item">
             <label class="checkbox">
